--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,12 @@ dependencies {
 	implementation 'jakarta.validation:jakarta.validation-api:3.1.0-M1'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'org.flywaydb:flyway-core'
-
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
 	runtimeOnly 'org.postgresql:postgresql'
 }
