--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
+
+task-scheduler:
+  execution-time: "00:00"
+  cron-expression: "0 0 * * * ?"
