--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-3.0'
+	testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-3.0'
 	testImplementation 'org.codehaus.groovy:groovy-all:3.0.20'
-
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
